<resources>
    <string name="app_name">Hero Typer</string>

    <!--<string name="title_activity_welcome">MainMenuActivity</string>-->
    <string name="start_game">Start Game</string>
    <string name="view_stats">View Stats</string>
    <string name="game_title">Hero Typer</string>
    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="back_text">Back</string>
    <string name="background_desc">Space Background</string>
    <string name="settings">Settings</string>
    <string name="settings_shprefs_key">hero_typer_settings</string>
    <string name="background_volume_key">background_volume</string>
    <string name="sound_volume_key">sound_volume</string>
    <string name="keyboard_style_key">keyboard_style</string>
    <string name="background_volume_text">Background Volume</string>
    <string name="sound_volume_text">Sound Volume</string>
    <string name="keyboard_style_text">Keyboard Style</string>
    <string name="keyboard_style_qwerty">Qwerty</string>
    <string name="keyboard_style_colemak">Colemak</string>
    <string name="keyboard_style_dvorak">Dvorak</string>
    <string name="keyboard_style_custom">Custom</string>
    <string-array name="keyboard_arrays">
        <item>@string/keyboard_style_qwerty</item>
        <item>@string/keyboard_style_colemak</item>
        <item>@string/keyboard_style_dvorak</item>
        <item>@string/keyboard_style_custom</item>
    </string-array>
    <string name="save_settings">Save</string>
    <string name="template">Change Me</string>
    <string name="pause">Pause</string>
    <string name="stats_text">Statistics</string>
    <string name="keyboard_stats_header">Accuracy</string>
    <string name="speed_stats_header">Speed</string>
    <string name="speed_stats_no_data">Not Enough Data Available</string>

    <string name="keyboard_stats_key_value">Letter: %s</string>
    <string name="keyboard_stats_key_status">Status: %s</string>
    <string name="keyboard_stats_key_hits">Hits: %d</string>
    <string name="keyboard_stats_key_misses">Misses: %d</string>
</resources>
