<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/constraintLayout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/game_background"
                                             tools:context=".activities.MainMenuActivity">

    <ImageView
            android:id="@+id/title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp"
            android:src="@drawable/hero_typer_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309" />

    <LinearLayout
            android:id="@+id/menu_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_image"
            >

        <Button
                android:id="@+id/start_game_button"
                style="@style/DefaultButtonStyle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/start_game" />

        <Button
                android:id="@+id/view_stats_button"
                style="@style/DefaultButtonStyle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/view_stats" />

        <Button
                android:id="@+id/settings_button"
                style="@style/DefaultButtonStyle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/settings"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/difficulty_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_image"
            android:visibility="gone"
            >

        <Button
                android:id="@+id/easy_button"
                style="@style/DefaultButtonStyle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/easy_text" />

        <Button
                android:id="@+id/medium_button"
                style="@style/DefaultButtonStyle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/medium_text" />

        <Button
                android:id="@+id/hard_button"
                style="@style/DefaultButtonStyle"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/hard_text" />

        <Button
                android:id="@+id/cancel_button"
                style="@style/DefaultButtonStyle"
                android:backgroundTint="@color/redOverlay"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/back_text" />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/blackOverlay"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HeaderText"
                android:text="LOADING"
                />

        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/progressBar"
                android:indeterminateDrawable="@drawable/progress_bar"
                />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>