<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/constraintLayout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="#1A083A"
                                             tools:context=".activities.MainMenuActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <ImageView android:id="@+id/fullscreen_content"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:contentDescription="@string/background_desc"
               android:gravity="center"
               android:keepScreenOn="true"
               android:scaleType="centerCrop"
               android:src="@drawable/background"
               app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.421"/>

    <TextView
            android:id="@+id/settings_title"
            android:layout_width="186dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings"
            android:textColor="@color/colorWhite"
            style="@style/HeaderText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fullscreen_content"
            app:layout_constraintVertical_bias="0.048" />

    <ScrollView
            android:layout_width="355dp"
            android:layout_height="490dp"
            app:layout_constraintBottom_toTopOf="@+id/save_settings"
            app:layout_constraintEnd_toEndOf="@+id/fullscreen_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_title">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/background_volume_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/background_volume_text"
                    android:textColor="@color/colorWhite" />

            <SeekBar
                    android:id="@+id/background_volume_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:max="100"
                    android:progressTint="#D19898"
                    android:thumbTint="#D19898"
                    android:tickMarkTint="#D19898" />

            <TextView
                    android:id="@+id/sound_volume_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_volume_text"
                    android:textColor="@color/colorWhite" />

            <SeekBar
                    android:id="@+id/sound_volume_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:max="100"
                    android:progressTint="#D19898"
                    android:thumbTint="#D19898"
                    android:tickMarkTint="#D19898" />

            <TextView
                    android:id="@+id/keyboard_setting_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboard_style_text"
                    android:textColor="@color/colorWhite" />

            <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >
                            <include
                                android:id="@+id/default_keyboard"
                                layout="@layout/custom_keyboard_keys_medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >
                        <include
                                android:id="@+id/colemak"
                                layout="@layout/custom_keyboard_keys_medium_colemak"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >
                        <include
                                android:id="@+id/dvorak"
                                layout="@layout/custom_keyboard_keys_medium_dvorak"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/save_settings"
            style="@style/DefaultButtonStyle"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fullscreen_content"
            app:layout_constraintVertical_bias="0.942" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</androidx.constraintlayout.widget.ConstraintLayout>